ProcessHelper: general refractoring